started alternative implementation
This will probably not be used, but saving it anyways

--- a/flow/CMakeLists.txt
+++ b/flow/CMakeLists.txt
@@ -38,6 +38,8 @@ set(FLOW_SRCS
   JsonTraceLogFormatter.h
   Knobs.cpp
   Knobs.h
+  LineageProperties.h
+  LineageProperties.cpp
   MetricSample.h
   Net2.actor.cpp
   Net2Packet.cpp
